<resources>
    <string name="app_name">My Application</string>
    <string name="label_email_address">Email address</string>
    <string name="label_forgot_password_head">Forgot password</string>
    <string name="label_forgot_password_sub_head">We need to verify your identity to reset your password. Enter the email address and date of birth on tihs account.</string>
    <string name="label_dob">Date of birth</string>
    <string name="label_dob_format">MM/DD/YYYY</string>
    <string name="label_continue">Continue</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_email_error">Enter a valid email address</string>
    <string name="label_dob_error">Enter a vaild date of birth</string>
    <string name="label_email_note">Account holder only</string>
    <string name="label_patient_first_name">Patient first name</string>
    <string name="label_patient_last_name">Patient last name</string>
    <string name="label_fields_required">All fields requ</string>
    <string name="label_dont_have_account">Dont have account?</string>
    <string name="label_create_account">Create an account</string>


    <!-- Start Reset Password strings -->
    <string name="label_create_new_password">Create a new password</string>
    <string name="label_new_password">New password</string>
    <string name="label_new_password_helper_text">Must be 10–25 characters long, include an uppercase letter, lowercase letter, number</string>
    <string name="label_confirm_password">Confirm new password</string>
    <string name="label_save_password">Save password</string>
    <string name="label_password_match_error">Passwords need to match</string>
    <string name="label_password_error">Invalid password</string>
    <string name="label_confirm_password_helper_text">Passwords must match</string>
    <string name="label_fields_error">All fields error</string>
    <string name="label_password_reset_success">Success! your password has been reset</string>
    <string name="label_sign_in">Sign in</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_password_special_char_error">Allows only some special chars</string>
    <string name="close">Close</string>

    <string name="error_plz_enter_password">Please enter a password</string>
    <string name="error_password_cvs_specialty">Cannot include the words CVS or Specialty</string>
    <string name="error_password_email_included">Cannot include your email address</string>
    <string name="error_password_special_chars"><![CDATA[Only these special characters allowed !@#$%^&*()]]></string>
    <string name="error_password_unsatisfactory">One or more requirements weren\'t met</string>
    <string name="error_message_empty_passwords">Enter a password and make sure you confirm your new password</string>
    <string name="error_message_passwords_mismatch">Enter a password and make sure your passwords match</string>
    <string name="error_make_sure_passwords_match">Make sure passwords match</string>
    <string name="error_confirm_new_password">Confirm your new password</string>
    <string name="error_patient_first_name">Please enter patient\'s first name</string>
    <string name="error_patient_last_name">Please enter patient\'s last name</string>
    <string name="error_empty_email">Please enter an email address</string>
    <string name="error_empty_dob">Please enter patient\'s date of birth</string>
    <string name="error_invalid_email">Please enter a valid email address</string>
    <string name="error_future_dob">Date of birth cannot be future date</string>
    <string name="error_title_unlock_user">There are %1$d errors</string>
    <string name="error_message_unlock_user">Please review your entries and enter all required information</string>
    <string name="error_valid_dob">Please enter patient\'s valid date of birth</string>
    <string name="error_empty_email_and_missing_dob">Enter account holder\'s email and patient\'s date of birth</string>
    <string name="error_empty_email_and_wrong_dob">Enter account holder\'s email and patient\'s valid date of birth</string>
    <string name="error_empty_email_and_future_dob">Enter account holder\'s email. Patient\'s date of birth cannot be a future date</string>
    <string name="error_invalid_email_and_missing_dob">Enter account holder\'s valid email and patient\'s date of birth</string>
    <string name="error_invalid_email_and_wrong_dob">Enter account holder\'s valid email and patient\'s valid date of birth</string>
    <string name="error_invalid_email_and_future_dob">Enter account holder\'s valid email. Patient\'s date of birth cannot be a future date</string>

</resources>