<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/unlockAccountLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:filterTouchesWhenObscured="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/margin_medium">

        <TextView
            android:id="@+id/txt_create_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/input_margin_medium"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/label_create_new_password"
            android:textColor="@color/black_d9"
            android:textSize="@dimen/label_text_xxxlarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_new_password"
            style="@style/LabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginTop="20dp"
            android:text="@string/label_new_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_create_password" />

        <TextView
            android:id="@+id/txt_new_password_helper"
            style="@style/LabelHelperText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/input_margin_medium"
            android:layout_marginTop="@dimen/input_margin_xsmall"
            android:text="@string/label_new_password_helper_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_new_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_new_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/input_margin_medium"
            android:layout_marginTop="@dimen/input_margin_small"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@drawable/ic_baseline_info_24"
            app:helperTextTextColor="@color/deals_and_rewards_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_new_password_helper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_new_password"
                style="@style/AppInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="25" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_confirm_password"
            style="@style/LabelText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/label_confirm_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/il_new_password" />

        <TextView
            android:id="@+id/txt_confirm_password_helper"
            style="@style/LabelHelperText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/input_margin_medium"
            android:layout_marginTop="@dimen/input_margin_xsmall"
            android:text="@string/label_confirm_password_helper_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_confirm_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_confirm_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/input_margin_medium"
            android:layout_marginTop="@dimen/input_margin_small"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@drawable/ic_baseline_info_24"
            app:helperTextTextColor="@color/deals_and_rewards_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_confirm_password_helper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="25" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_password"
            style="@style/AppPrimaryButton"
            android:layout_marginHorizontal="@dimen/input_margin_medium"
            android:layout_marginTop="@dimen/margin_xxlarge"
            android:text="@string/label_save_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/il_confirm_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/AppSecondaryButton"
            android:layout_marginHorizontal="@dimen/input_margin_medium"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:text="@string/label_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_save_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>