<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/unlockAccountLayout"
    android:background="@color/white"
    android:filterTouchesWhenObscured="true">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingVertical="@dimen/margin_medium"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_forgot_password_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/input_margin_medium"
                android:text="@string/label_forgot_password_head"
                android:textColor="@color/black_d9"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/label_text_xxxlarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_forgot_password_sub_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginHorizontal="@dimen/input_margin_medium"
                android:text="@string/label_forgot_password_sub_head"
                android:textColor="@color/black"
                android:textSize="@dimen/label_text_large"
                android:fontFamily="@font/roboto_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_forgot_password_head" />

            <TextView
                android:id="@+id/txt_fields_required"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginHorizontal="@dimen/input_margin_medium"
                android:text="@string/label_fields_required"
                android:textColor="@color/grey_100"
                android:textSize="@dimen/label_text_large"
                android:fontFamily="@font/roboto_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_forgot_password_sub_head" />

            <TextView
                android:id="@+id/txt_email_address"
                style="@style/LabelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:text="@string/label_email_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_fields_required" />

            <TextView
                android:id="@+id/txt_email_note"
                style="@style/LabelHelperText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/input_margin_medium"
                android:layout_marginTop="@dimen/input_margin_xsmall"
                android:text="@string/label_email_note"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_email_address" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/input_margin_medium"
                android:layout_marginTop="@dimen/input_margin_small"
                app:endIconMode="custom"
                app:errorIconDrawable="@drawable/ic_baseline_info_24"
                app:helperTextTextColor="@color/deals_and_rewards_red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_email_note">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    style="@style/AppInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_patient_first_name"
                style="@style/LabelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:text="@string/label_patient_first_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/il_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_patient_first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/input_margin_medium"
                android:layout_marginTop="@dimen/input_margin_small"
                app:endIconMode="custom"
                app:errorIconDrawable="@drawable/ic_baseline_info_24"
                app:helperTextTextColor="@color/deals_and_rewards_red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_patient_first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_patient_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_patient_last_name"
                style="@style/LabelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/input_margin_medium"
                android:text="@string/label_patient_last_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/il_patient_first_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_patient_last_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/input_margin_medium"
                android:layout_marginTop="@dimen/input_margin_small"
                app:endIconMode="custom"
                app:errorIconDrawable="@drawable/ic_baseline_info_24"
                app:helperTextTextColor="@color/deals_and_rewards_red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_patient_last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_patient_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Group
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="txt_patient_first_name,il_patient_first_name,txt_patient_last_name,il_patient_last_name"
                android:id="@+id/groupUnlockAccount" />

            <TextView
                android:id="@+id/txt_dob"
                style="@style/LabelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginHorizontal="@dimen/input_margin_medium"
                android:text="@string/label_dob"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/il_patient_last_name" />

            <TextView
                android:id="@+id/txt_dob_format"
                style="@style/LabelHelperText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/input_margin_medium"
                android:layout_marginTop="@dimen/input_margin_xsmall"
                android:text="@string/label_dob_format"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_dob" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_dob"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/input_margin_medium"
                android:layout_marginTop="@dimen/input_margin_small"
                app:endIconMode="custom"
                app:errorIconDrawable="@drawable/ic_baseline_info_24"
                app:helperTextTextColor="@color/deals_and_rewards_red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_dob_format">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_dob"
                    style="@style/AppInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="date"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_continue"
                style="@style/AppPrimaryButton"
                android:layout_marginHorizontal="@dimen/input_margin_medium"
                android:layout_marginTop="@dimen/margin_xxlarge"
                android:text="@string/label_continue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/il_dob" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/AppSecondaryButton"
                android:layout_marginHorizontal="@dimen/input_margin_medium"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:text="@string/label_cancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_continue" />
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:background="@color/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_cancel" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/label_text_medium"
                    android:text="@string/label_dont_have_account" />
                <TextView
                    android:id="@+id/txt_create_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/deals_and_rewards_red"
                    android:textSize="@dimen/label_text_medium"
                    android:layout_marginStart="4dp"
                    android:text="@string/label_create_account" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

  </ScrollView>

</LinearLayout>